crates/data-dict/tests/snapshots/export__export_data_fails_on_metadata_mismatch.snap
---
source: crates/data-dict/tests/export.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: animals
    source:
      parquet: data.parquet
    columns:
      - name: id
        type: number(id)
        examples: [1]
      - name: name
        type: string
        examples: [otter]
      - name: weight
        type: string
        examples: [heavy]
────────────────────────────────────────
error[M01]: A column's data must match its declared type.
  --> dict.yaml:15:15
   |
LL |   - name: animals
...
LL |       - name: weight
LL |         type: string
   |               ^^^^^^ the data is `number`
